# federated-learning

./: .dockerignore  .gitignore  README.md  commands.txt  requirements.txt  requirements2.txt
admin-server/: Dockerfile  main.py
admin-server/utils/: config.py  constants.py  process_manager.py  schemas.py
client-server/: Dockerfile  main.py
client-server/utils/: __init__.py  config.py  constants.py  schemas.py  supabase.py  supernode_manager.py
db/: schema.sql
flower-app/: README.md  pyproject.toml
flower-app/flower_app/: __init__.py  client_app.py  server_app.py  task.py  telemetry.py
flower-app/flower_app/models/: __init__.py  base.py  gradient_boosting.py  logistic_regression.py  mlp.py  random_forest.py
frontend/: eslint.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/app/(marketing)/: page.tsx
frontend/components/global/: app-sidebar.tsx  header.tsx
frontend/components/landing/: cta.tsx  feature-details.tsx  features.tsx  hero.tsx  system-flow.tsx
frontend/components/navigation/: breadcrumbs.tsx
frontend/components/supaauth/: register.tsx  signin.tsx  social.tsx
frontend/components/ui/: dashboard-surface.tsx
frontend/hooks/: get-user.ts
frontend/lib/config/: footer.ts  header.ts  sidebar.ts
frontend/lib/constants/: index.ts
frontend/lib/fetchers/: admin.ts  client.ts  http.ts  projects.ts  types.ts
latex/: .gitignore
latex/latex/snopsis/: report.tex
latex/paper/: main.tex
latex/report/: REPORT.md  main.tex
latex/report/sections/: abstract.tex  chapter1_introduction.tex  chapter2_literature_survey.tex  chapter3_design.tex  chapter4_implementation.tex  chapter5_results.tex  chapter6_conclusion.tex  references.tex
(+75 files in other folders)
